@@ -1,14 +1,19 @@
 package com.game;
 
-import java.awt.*;
-import java.awt.font.TextLayout;
 import java.io.IOException;
 
 public class Screen {
-    public static void ClearScreen() throws IOException, InterruptedException {
-        new ProcessBuilder("cmd", "/c", "cls", "clear").inheritIO().start().waitFor();
-    }
+    public static void ClearScreen() {
+       try {
+           if(System.getProperty("os.name").contains("Windows")) {
+               new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+           } else {
+               Runtime.getRuntime().exec("clear");
+           }
+       } catch (IOException | InterruptedException ignored) {
 
+        }
+    }
     public static void DivideScreen() {
         System.out.println("\n=========================================================================================\n");
     }
